# gustavsfairyland

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  COPYING  ChangeLog  INSTALL  README  README.md  TODO  Toolchain-Fedora-mingw64.cmake  aboutdialog.cpp  aboutdialog.h  appveyor.yml  archive.sh  bonusclip.cpp  bonusclip.h  buildandroid.sh  buildandroid_arm.sh  buildandroid_arm_release.sh  buildandroid_x86.sh  buildandroid_x86_release.sh  buildffmpeg_qtmel.sh  buildlinux_debug.sh  buildlinux_release.sh  buildqt.sh  buildqt_x86_64.sh  buildqtavforandroid.sh  buildqtavforlinux.sh  clickanimation.h  clip.cpp  clip.h  clipeditor.cpp  clipeditor.h  clippackage.cpp  clippackage.h  clippackagedialog.cpp  clippackagedialog.h  clippackagedialog.ui  clippackageeditor.cpp  (+68 more)
clips/: clips.xml  custom.xml  gustav.xml
clips/bank/: bank.mkv  bank_compressed.mkv  bank_compressed_android.mkv  bank_compressed_unix.mkv  bank_compressed_windows.mkv
clips/hello/: hallo.mkv  hallo_compressed.mkv  hello_compressed_android.mkv  hello_compressed_unix.mkv  hello_compressed_windows.mkv
clips/nazi/: peter_compressed.mkv
cmake/: AddQtAndroidApk.cmake  AndroidManifest.xml.in
doc/: Automat.dia  KonzeptWind.xcf  Mahler.odt  MultiplayerProtocol.md  NeuesKonzept.xcf  doxygen.conf  planung.odt
lib/: ffmpeg-3.1.5.tar.bz2.asc
oxygen-icons-png-master/: oxygen_windows.qrc
resources/: paper.eps
scripts/: archive.sh  buildandroid.sh  buildandroid_arm_debug.sh  buildandroid_x86.sh  buildandroid_x86_debug.sh  buildffmpeg_qtmel.sh  buildlinux_debug.sh  buildlinux_release.sh  buildqt.sh  buildqt_arm.sh  buildqt_x86.sh  buildqtavforandroid.sh  compressaudio.sh  compressvideos.sh  copyclipsforbuild.sh  debuglinux.sh  generateandroidkey.sh  removeclipsfromhistory.sh
share/: gustavsfairyland.desktop
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  abstractclip.cpp  abstractclip.h  bonusclip.cpp  bonusclip.h  bonusclipsdialog.cpp  bonusclipsdialog.h  clickanimation.cpp  clickanimation.h  clip.cpp  clip.h  clipeditor.cpp  clipeditor.h  clippackage.cpp  clippackage.h  clippackagedialog.cpp  clippackagedialog.h  clippackageeditor.cpp  clippackageeditor.h  customfairytale.cpp  customfairytale.h  customfairytaledialog.cpp  customfairytaledialog.h  door.cpp  door.h  fairytale.cpp  fairytale.h  fairytalesdialog.cpp  fairytalesdialog.h  floatingclip.cpp  floatingclip.h  gamemode.cpp  gamemode.h  gamemodecreative.cpp  gamemodecreative.h  gamemodemoving.cpp  gamemodemoving.h  gamemodemultiplayer.cpp  (+41 more)
src/android/: Player.java
src/server/: httpserver.cpp  httpserver.h  requesthandler.cpp  requesthandler.h  server.cpp
src/test/: CMakeLists.txt  clips.xml  cliptest.cpp  cliptest.h  recordtest.cpp  recordtest.h
test/: CMakeLists.txt  clip.cpp  clip.h  clips.xml  cliptest.cpp  cliptest.h
translations/: de.ts  en.ts  fairylandstrings-de.xml  fairylandstrings.xml
ui/: aboutdialog.ui  bonusclipsdialog.ui  clipeditor.ui  clippackagedialog.ui  clippackageeditor.ui  clips.ui  customfairytale.ui  fairytalesdialog.ui  gamemodedialog.ui  gameoverdialog.ui  highscores.ui  languagedialog.ui  localedialog.ui  mainwindow.ui  player.ui  recorder.ui  recorderview.ui  settings.ui  wondialog.ui
win32/: client.rc
